setup/res/template.css - Fix "Sample Data" alignment
This rule appears to be targetted at "Components" section, but it actually affects the entire document
Consequently, the "Localization" and "Sample Data" segments bleed together weirdly.

--- a/setup/res/template.css
+++ b/setup/res/template.css
@@ -84,7 +84,7 @@ body {
   padding-bottom: 1.5em;
 }
 
-.civicrm-setup-body label span {
+.civicrm-setup-block-components label span {
   float: left;
   width: 120px;
 }
